Metabase/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metabase-service
  namespace: metabase
spec:
  type: ClusterIP
  selector:
    app: metabase
  ports:
    - name: http
      port: 3000
      targetPort: 3000
